# multi_agent_system

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  langgraph.json  pyproject.toml  requirements.txt
.github/workflows/: pre_commit_hooks.yaml  run-tests.yml
agents/: __init__.py  config.py  graph.py  prompts.py  schemas.py
agents/rag/: __init__.py  graph.py  prompts.py  schemas.py  tools.py
agents/researcher/: __init__.py  graph.py  prompts.py  schemas.py  tools.py
docs/: ml_frameworks.md
examples/: use_cases.md
src/: config.py
src/agents/orchestrator/: graph.py  prompts.py  schemas.py
src/agents/rag/: graph.py  prompts.py  schemas.py  tools.py
src/agents/react/: __init__.py  agent.py  prompts.py  schemas.py  tools.py
src/agents/researcher/: __init__.py  graph.py  schemas.py  tools.py
src/agents/summarizer/: graph.py  prompts.py  schemas.py  tools.py
src/backend/: config.py
src/backend/agents/: __init__.py
src/backend/agents/knowledge/: tools.py
src/backend/agents/summarizer/: prompts.py
src/static/: index.html
src/static/js/: script.js
src/static/styles/: main.css
src/utils/: __init__.py  file_utils.py  inspect_chroma.py
tests/: conftest.py  test_routes.py
utils/: __init__.py  file_utils.py  inspect_chroma.py  message_utils.py
