[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_agent_system"
version = "0.1.0"
description = "A sophisticated multi-agent system using LangChain and LangGraph"
requires-python = ">=3.11"
authors = [
    {name = "Cesar Goncalves", email = "goncalves.cesaraugusto94@gmail.com"},
]
dependencies = [
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langgraph-checkpoint-sqlite",
    "langgraph",
    "aiosqlite",
    "tavily-python",
    "wikipedia",
    "pydantic",
    "python-dotenv",
    "langchain-chroma",
    "rich"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["agents", "utils"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]
